tests/snapshots/schema_cli__schema_tasks_list.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "assignee": {
        "description": "Only tasks assigned to this person (a case-insensitive exact match), or to anyone with `*`. Without --list, the open tasks of every list, grouped by person",
        "type": "string",
        "x-cli": "--assignee"
      },
      "category": {
        "description": "Only tasks with this category (ignoring case)",
        "type": "string",
        "x-cli": "--category"
      },
      "completed": {
        "description": "Only completed tasks, as --status completed",
        "type": "boolean",
        "x-cli": "--completed"
      },
      "deferred": {
        "description": "Tasks deferred to a later day, or parked as Someday: hide (the default; the table says how many), include, or only them (every list without --list, by the day they come back, then Someday). A search always includes them",
        "enum": [
          "hide",
          "include",
          "only"
        ],
        "x-cli": "--deferred"
      },
      "due": {
        "description": "Only tasks due: today, overdue (open and due before today), none, any, \"before fri\", \"after 12 oct\", or on a day (tomorrow, 2026-10-02)",
        "type": "string",
        "x-cli": "--due"
      },
      "importance": {
        "description": "Only tasks of this importance: high, normal or low (or 1–4, p1–p4)",
        "type": "string",
        "x-cli": "--importance"
      },
      "limit": {
        "description": "At most this many, after sorting",
        "type": "string",
        "x-cli": "--limit"
      },
      "list": {
        "description": "The list's exact name or its ID [default: the \"Tasks\" list, or with --status, --due, --importance, --category, --deferred only or --nagging, every list]",
        "type": "string",
        "x-cli": "--list"
      },
      "my_day": {
        "description": "Today's My Day instead of a list, as `myday list` gives it",
        "type": "boolean",
        "x-cli": "--my-day"
      },
      "nagging": {
        "description": "Only open tasks set to nag (`tasks nag`); each has `nag`, its interval in minutes, in its extension",
        "type": "boolean",
        "x-cli": "--nagging"
      },
      "search": {
        "description": "Only tasks whose title or notes match, best match first; the syntax is `search`'s",
        "type": "string",
        "x-cli": "--search"
      },
      "sort": {
        "description": "Order by: due (soonest first, none last), importance (high first), created or modified (newest first), title [default: the list's order; every list's is by due date]",
        "enum": [
          "due",
          "importance",
          "created",
          "modified",
          "title"
        ],
        "x-cli": "--sort"
      },
      "status": {
        "description": "Only tasks with this status",
        "enum": [
          "open",
          "completed",
          "all",
          "not-started",
          "in-progress",
          "waiting",
          "deferred"
        ],
        "x-cli": "--status"
      }
    },
    "required": [],
    "type": "object"
  },
  "output": {
    "properties": {
      "deferred_hidden": {
        "description": "How many open tasks matched but were left out for being deferred to a later day or Someday; --deferred include shows them",
        "type": "integer"
      },
      "items": {
        "items": {
          "description": "A task: every field Microsoft Graph returns, with `id` replaced",
          "properties": {
            "attachments": {
              "description": "Its attachments' metadata, as `attachments list` gives it without `index`; absent until a sync has fetched it",
              "items": {
                "type": "object"
              },
              "type": "array"
            },
            "body": {
              "type": "object"
            },
            "categories": {
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            "createdDateTime": {
              "type": "string"
            },
            "defer_until": {
              "description": "YYYY-MM-DD, a local day: the task is hidden from everyday views until then (ms-todo's own; the To Do apps don't hide it). On its day it shows again",
              "type": [
                "string",
                "null"
              ]
            },
            "dueDateTime": {
              "description": "Graph's dateTimeTimeZone; a date only",
              "type": "object"
            },
            "extensions": {
              "description": "ms-todo's own open extension (com.planetaryescape.mstodo), when it has one and it has been fetched. A task's may hold myDay, myDayDueSet, assignee, assigneeStatusSet and nag (minutes between nag reminders)",
              "items": {
                "type": "object"
              },
              "type": "array"
            },
            "graph_id": {
              "description": "Microsoft Graph's ID, for `raw` and debugging; commands take it too",
              "type": [
                "string",
                "null"
              ]
            },
            "id": {
              "description": "ms-todo's local ID; stable, and what commands take",
              "type": "string"
            },
            "importance": {
              "enum": [
                "low",
                "normal",
                "high"
              ]
            },
            "isReminderOn": {
              "type": "boolean"
            },
            "lastModifiedDateTime": {
              "type": "string"
            },
            "list": {
              "description": "The name of the task's list: only with --assignee, or a filter (--status, --due, --importance, --category, --deferred only) and no --list",
              "type": "string"
            },
            "list_id": {
              "description": "The local ID of the task's list",
              "type": "string"
            },
            "recurrence": {
              "type": "object"
            },
            "reminderDateTime": {
              "type": "object"
            },
            "someday": {
              "description": "Parked as Someday: hidden from everyday views until taken out (ms-todo's own)",
              "type": "boolean"
            },
            "status": {
              "description": "notStarted, waitingOnOthers or completed, among Graph's values",
              "type": "string"
            },
            "sync_state": {
              "description": "From its outbox writes: synced; pending (queued or being sent); unknown (a write may or may not have reached Microsoft To Do; never retry it, see `outbox list`); failed (a write was rejected and rolled back; see `outbox list`)",
              "enum": [
                "synced",
                "pending",
                "unknown",
                "failed"
              ]
            },
            "title": {
              "type": "string"
            }
          },
          "required": [
            "id",
            "graph_id",
            "sync_state",
            "list_id",
            "title",
            "defer_until",
            "someday"
          ],
          "type": "object"
        },
        "type": "array"
      },
      "schema_version": {
        "const": 2
      },
      "sync": {
        "properties": {
          "generation": {
            "description": "Goes up by one per finished sync of the scope",
            "type": "integer"
          },
          "state": {
            "description": "initial until this scope's first sync finishes: an empty `items` then doesn't mean empty",
            "enum": [
              "initial",
              "ready"
            ]
          }
        },
        "required": [
          "state",
          "generation"
        ],
        "type": "object"
      }
    },
    "required": [
      "schema_version",
      "sync",
      "items",
      "deferred_hidden"
    ],
    "type": "object"
  }
}
